Fixed background overlap fixed

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ h1:hover {
 .containsCarousel {
     z-index: -1;
     opacity: 0.30;
+    position: fixed;
     height: 100%;
 }
 body {
